registration / login ready refactoring in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.error.include-stacktrace=always
 spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+jwt.secret=super_secure_256_bit_key_that_is_random
+jwt.expiration=3600000
